# cfml-jupyter-kernel

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.development  LICENSE  README.md  build.Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
cfml_kernel/: box_wrapper.py  setup.py
cfml_kernel/cfml/: __init__.py  __main__.py  install.py  kernel.py
cfml_kernel/cfml_kernel/: __init__.py  install.py  kernel.py
cfml_kernel/cfscript/: __init__.py  install.py  kernel.py
cfscript_kernel/: setup.py
cfscript_kernel/cfscript_kernel/: __init__.py  __main__.py  install.py  kernel.py
docker/: Dockerfile  docker-compose.yml
notebook_examples/: ArrowFunctions.ipynb  Breakfast.ipynb  HelloWorldTag.ipynb  cfquery.ipynb
notebooks/: ArrowFunctions.ipynb  Breakfast.ipynb  HelloWorldTag.ipynb
