[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "cfml_kernel"
version = "0.0.1"
authors = [
  { name="Jason steinshouer", email="jason.steinshouer@gmail.com" },
]
description = "A Jupyter notebook kernel for CFML powered by Commandbox"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ['cfml_kernel','cfml_kernel.cfml','cfml_kernel.cfscript']